--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -15,6 +15,8 @@
          <a href="/">Home</a>
          <a href="/books">Ver Libros</a>
          <a href="/books/create">Crear Libro</a>
+         <a href="/author">Ver Autores</a>
+         <a href="/author/create">Crear Autor</a>
       </nav>
 
       {{{body}}}
