--- a/views/book/add-form.hbs
+++ b/views/book/add-form.hbs
@@ -10,7 +10,16 @@
   <input type="text" name="description" required="true" autocomplete="off">
   <br>
   <label for="author">Autor</label>
-  <input type="text" name="author" required="true">
+  {{!-- <input type="text" name="author" required="true"> --}}
+  {{!-- select y option --}}
+  <select name="author" multiple="true">
+    {{!-- <option value="hola">Hola</option>
+    <option value="adios">Adios</option>
+    <option value="holaDeNuevo">Hola de nuevo</option> --}}
+    {{#each allAuthors}}
+      <option value="{{this._id}}">{{this.name}}</option>
+    {{/each}}
+  </select>
   <br>
   <button>Agregar Libro</button>
 
