--- a/views/book/details.hbs
+++ b/views/book/details.hbs
@@ -5,7 +5,10 @@
 
 <p>Title: {{bookDetails.title}}</p>
 <p>Description: {{bookDetails.description}}</p>
-<p>Author: {{bookDetails.author}}</p>
+  <p>Author:</p>
+{{#each bookDetails.author}}
+  <p>{{this.name}} de {{this.country}} y nacid@ en {{this.yearBorn}}</p>
+{{/each}}
 
 <a href="/books/{{bookDetails._id}}/edit"><button>Ir a Editar</button></a>
 
