--- a/views/book/details.hbs
+++ b/views/book/details.hbs
@@ -4,6 +4,9 @@
 
 
 <p>Title: {{bookDetails.title}}</p>
+
+<img src="{{bookDetails.image}}" alt="cover" width="100px">
+
 <p>Description: {{bookDetails.description}}</p>
   <p>Author:</p>
 {{#each bookDetails.author}}
